--- a/app/src/main/res/drawable/white_new.xml
+++ b/app/src/main/res/drawable/white_new.xml
@@ -7,14 +7,10 @@
             android:shape="rectangle">
 
             <solid
-                android:color="#FFFFFF"/>
+                android:color="#51FFFFFF"/>
 
             <corners
                 android:radius="20dp"/>
-
-            <stroke
-                android:width="2dp"
-                android:color="@color/lavender"/>
 
         </shape>
 
