--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/profilebkg"
+    android:background="@drawable/jeepney"
     tools:context=".ProfileActivity">
 
     <ImageView
@@ -13,7 +13,7 @@
         android:layout_height="100dp"
         android:id="@+id/profileImg"
         android:layout_marginTop="30dp"
-        android:src="@drawable/akwhitelogo"
+        android:src="@drawable/naveona"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
@@ -25,7 +25,7 @@
         android:layout_marginTop="10dp"
         android:text="Name"
         android:textColor="@color/white"
-        android:textSize="20sp"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@id/profileImg"
         app:layout_constraintStart_toStartOf="@id/profileImg"
@@ -38,6 +38,7 @@
         android:text="username"
         android:textColor="@color/white"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@id/titleName"
         app:layout_constraintStart_toStartOf="@id/titleName"
         app:layout_constraintTop_toBottomOf="@id/titleName"/>
@@ -77,7 +78,7 @@
                     android:text="27"
                     android:gravity="center"
                     android:textAlignment="center"
-                    android:textColor="@color/lavender"
+                    android:textColor="@color/black"
                     android:textSize="26sp"
                     android:textStyle="bold"/>
 
@@ -87,7 +88,7 @@
                     android:id="@+id/posts"
                     android:text="Posts"
                     android:textAlignment="center"
-                    android:textColor="@color/lavender"
+                    android:textColor="@color/black"
                     android:textSize="16sp"/>
 
             </LinearLayout>
@@ -108,7 +109,7 @@
                     android:text="455"
                     android:gravity="center"
                     android:textAlignment="center"
-                    android:textColor="@color/lavender"
+                    android:textColor="@color/black"
                     android:textSize="26sp"
                     android:textStyle="bold"/>
 
@@ -118,7 +119,7 @@
                     android:id="@+id/followers"
                     android:text="Followers"
                     android:textAlignment="center"
-                    android:textColor="@color/lavender"
+                    android:textColor="@color/black"
                     android:textSize="16sp"/>
 
             </LinearLayout>
@@ -139,7 +140,7 @@
                     android:text="413"
                     android:gravity="center"
                     android:textAlignment="center"
-                    android:textColor="@color/lavender"
+                    android:textColor="@color/black"
                     android:textSize="26sp"
                     android:textStyle="bold"/>
 
@@ -149,7 +150,7 @@
                     android:id="@+id/following"
                     android:text="Following"
                     android:textAlignment="center"
-                    android:textColor="@color/lavender"
+                    android:textColor="@color/black"
                     android:textSize="16sp"/>
 
             </LinearLayout>
@@ -173,7 +174,7 @@
                 android:layout_weight="1"
                 android:text="Name"
                 android:textStyle="bold"
-                android:textColor="@color/lavender"
+                android:textColor="@color/black"
                 android:textSize="18sp"/>
 
             <TextView
@@ -193,7 +194,7 @@
             android:layout_height="1dp"
             android:layout_margin="10dp"
             android:alpha="0.5"
-            android:background="@color/lavender"/>
+            android:background="@color/black"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -209,7 +210,7 @@
                 android:layout_weight="1"
                 android:text="Email"
                 android:textStyle="bold"
-                android:textColor="@color/lavender"
+                android:textColor="@color/black"
                 android:textSize="18sp"/>
 
             <TextView
@@ -229,7 +230,7 @@
             android:layout_height="1dp"
             android:layout_margin="10dp"
             android:alpha="0.5"
-            android:background="@color/lavender"/>
+            android:background="@color/black"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -245,7 +246,7 @@
                 android:layout_weight="1"
                 android:text="Username"
                 android:textStyle="bold"
-                android:textColor="@color/lavender"
+                android:textColor="@color/black"
                 android:textSize="18sp"/>
 
             <TextView
@@ -265,7 +266,7 @@
             android:layout_height="1dp"
             android:layout_margin="10dp"
             android:alpha="0.5"
-            android:background="@color/lavender"/>
+            android:background="@color/black"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -281,7 +282,7 @@
                 android:layout_weight="1"
                 android:text="Password"
                 android:textStyle="bold"
-                android:textColor="@color/lavender"
+                android:textColor="@color/black"
                 android:textSize="18sp"/>
 
             <TextView
@@ -299,16 +300,17 @@
     </LinearLayout>
 
     <Button
+        android:id="@+id/editButton"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:id="@+id/editButton"
+        android:backgroundTint="#EA3333"
         android:gravity="center"
         android:text="Edit Profile"
         android:textSize="18sp"
-        app:cornerRadius = "20dp"
+        app:cornerRadius="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/linearLayout"
         app:layout_constraintStart_toStartOf="@id/linearLayout"
-        app:layout_constraintTop_toBottomOf="@id/linearLayout"/>
+        app:layout_constraintTop_toBottomOf="@id/linearLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
